# AI_Job_Recommender_system_with_MCP

./: README.md  app.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py
